# Smart-Project

./: README.md
applications/sample/wifi-iot/app/: BUILD.gn
applications/sample/wifi-iot/app/Smart-Home/AccessControl/: access_control.c
applications/sample/wifi-iot/app/Smart-Home/Bathroom/: BUILD.gn  Tools.c  Tools.h  bathroom_task.c  bathroom_task.h  main.c  mqtt_utils.c
applications/sample/wifi-iot/app/Smart-Home/Bathroom_backup/: BUILD.gn  Tools.c  bathroom_task.c  bathroom_task.h  main.c  mqtt_utils.c  wifi_utils.c
applications/sample/wifi-iot/app/Smart-Home/Bedroom/: Bedroom_task.c  Tools.c  Tools.h  aht20.c  mqtt_utils.c  oled_task.c  wifi_utils.h
applications/sample/wifi-iot/app/Smart-Home/Kitchen/: BUILD.gn  Tools.c  Tools.h  aht20.h  kitchen_task.c  kitchen_task.h  main.c  mq2_demo.c  mqtt_utils.c  mqtt_utils.h  oled_bath.c  oled_task.c  oled_task.h  publish_task.h  wifi_utils.c
applications/sample/wifi-iot/app/Smart-Home/LivingRoom/: BUILD.gn  Tools.c  Tools.h  aht20.h  livingroom_task.h  livingroon_task.c  main.c  mqtt_utils.c  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h  oled_task.c  publish_task.c
applications/sample/wifi-iot/app/code_v2.0/NFC/: BUILD.gn  app_demo_nfc.c  c081_nfc.c  c081_nfc.h
applications/sample/wifi-iot/app/code_v2.0/chapter_04/: BUILD.gn  led_demo.c  traffic_led.c
applications/sample/wifi-iot/app/code_v2.0/chapter_05/: BUILD.gn  Tools.c  Tools.h  colorful_light.c  colorful_light.h  main.c  mqtt_utils.c  mqtt_utils.h
applications/sample/wifi-iot/app/code_v2.0/chapter_06/: BUILD.gn  aht20.c  aht20_demo.c  main.c  mq2_demo.c
applications/sample/wifi-iot/app/code_v2.0/chapter_08/: BUILD.gn  wifi_sta_demo.c
applications/sample/wifi-iot/app/code_v2.0/chapter_10/: BUILD.gn  main.c  mqtt_utils.c  mqtt_utils.h  wifi_utils.c  wifi_utils.h
applications/sample/wifi-iot/app/code_v2.0/fire/: BUILD.gn  Beep.h  fire.c
applications/sample/wifi-iot/app/startup/: BUILD.gn  hello.c
