static_library("ColorfulLight_Demo"){
    sources = [
        "colorful_light.c",
        "//vendor/hisi/hi3861/hi3861/platform/drivers/pwm/hi_pwm.c",
    ]

    include_dirs = [
        "//utils/native/lite/include",
        "//kernel/liteos_m/components/cmsis/2.0",
        "//base/iot_hardware/interfaces/kits/wifiiot_lite",
        "//vendor/hisi/hi3861/hi3861/platform/drivers/pwm",
        "//vendor/hisi/hi3861/hi3861/include",

    ]
    
    deps = [
        "//base/iot_hardware/frameworks/wifiiot_lite:iothardware",
        "//vendor/hisi/hi3861/hi3861:sdk"
    ]
}